venv for nsjail does not need rw access

--- a/nsjail/nsjail.cfg
+++ b/nsjail/nsjail.cfg
@@ -28,6 +28,13 @@ mount {
 }
 
 mount {
+  src: "/sandbox_venv"
+  dst: "/sandbox_venv"
+  is_bind: true
+}
+
+
+mount {
   src: "/lib"
   dst: "/lib"
   is_bind: true
@@ -61,9 +68,4 @@ mount {
   src: "/usr/local/bin"
   dst: "/usr/local/bin"
   is_bind: true
-}
-
-exec_bin {
- 	path: "/sandbox/venv/bin/python"
- 	arg: "/sandbox/runner.py"
 }
