--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,4 @@ wheels/
 
 # Virtual environments
 .venv
-/.idea/inspectionProfiles/profiles_settings.xml
-/.idea/inspectionProfiles/Project_Default.xml
-/.idea/.gitignore
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/nsjail-python-runner.iml
-/.idea/vcs.xml
+.idea
